# strathisla

./: CHANGELOG.md  README.md  contur_likelihood.py  diagnosis.ipynb  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
src/: likelihoods.py
src/contur_likelihood/: eft.py  likelihoods.py  nuisance_parameters.py  variable_covariance.py
src/strathisla/: eft.py
tests/: test_built_model_.py  test_invalid_inputs.py  test_nuisance_parameters.py
